--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-.pokemon-name {
+.text-pixel {
   font-family: "Silkscreen", sans-serif;
   font-weight: 400;
   font-style: normal;
